Deploy latest changes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <p class="text-sm text-gray-500 mt-6">Powered by ElevenLabs Conversational AI.</p>
             </div>
              <p class="text-sm text-gray-500 mt-4 max-w-2xl mx-auto">
-                Note: This demo uses the `@11labs/client` library, which needs installation via npm (`npm install @11labs/client`) and bundling (Vite/Webpack) for the `import` statement to work. Remember to replace 'YOUR_AGENT_ID' in the script.
+                Note: This is just a demo agent, any resemblance to an actual service is purely coincidental.
              </p>
         </div>
     </section>
