--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' fill='%234f46e5'><path d='M144 0c17.7 0 32 14.3 32 32V48h160V32c0-17.7 14.3-32 32-32s32 14.3 32 32V48 80 99.2c43.5 6.1 80.3 30.9 102.8 66.1l32.4-16.2c15.7-7.8 35.1-2.8 42.9 12.9s2.8 35.1-12.9 42.9l-32.4 16.2c13.1 30.4 19.9 64.1 19.9 98.8s-6.8 68.4-19.9 98.8l32.4 16.2c15.7 7.8 20.7 27.2 12.9 42.9s-27.2 20.7-42.9 12.9l-32.4-16.2C416.3 427 379.5 451.9 336 458V464 480c0 17.7-14.3 32-32 32s-32-14.3-32-32V464 416H176v48c0 17.7-14.3 32-32 32s-32-14.3-32-32V464 416 396.8c-43.5-6.1-80.3-30.9-102.8-66.1l-32.4 16.2c-15.7 7.8-35.1 2.8-42.9-12.9s-2.8-35.1 12.9-42.9l32.4-16.2C6.8 243.2 0 209.5 0 174.8s6.8-68.4 19.9-98.8L-12.5 59.8c-15.7-7.8-20.7-27.2-12.9-42.9s27.2-20.7 42.9-12.9l32.4 16.2C95.7 54.9 132.5 30.1 176 24V16 0zM336 128H176V192h80c17.7 0 32 14.3 32 32s-14.3 32-32 32H176v64h160V256h-80c-17.7 0-32-14.3-32-32s14.3-32 32-32h80V128z'/></svg>" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -86,7 +86,7 @@
     <section id="demo" class="py-16 bg-white">
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl font-bold mb-4 text-gray-800">Experience An AI Agent Live</h2>
-            <p class="text-gray-600 mb-10 max-w-2xl mx-auto">Click "Start Conversation" and grant microphone access to speak with the AI agent directly.</p>
+            <p class="text-gray-600 mb-10 max-w-2xl mx-auto">Click "Start Conversation" and grant microphone access to speak with an AI agent directly. This agent's name is Tony. He is a customer service guide for a hypothetical plumbing company called Tony's plumbing. The conversation is limited to 3 minutes in length.</p>
 
             <div class="bg-gray-100 p-8 rounded-lg shadow-lg max-w-md mx-auto">
                 <div class="flex justify-center space-x-4 mb-6">
@@ -203,7 +203,7 @@
                     Whether you need automated customer support, intelligent lead qualification, or interactive product guides, we can help you build an AI agent that delivers results. Let's create an AI solution that sets you apart. We'll create a free demo for your to test-drive! Just reach out using the form below.
                 </p>
                 <p class="text-lg leading-relaxed">
-                    Once the agent is created, you own it. We just help you build it and deploy it. We charge a fee for our creation services and the monthly hosting fee is paid directly to ElevenLabs. Their plans start at around $5.00 a month. <a href="https://try.elevenlabs.io/davidwicks" target="_blank" rel="noopener noreferrer">Visit <strong class="text-indigo-600">ElevenLabs</strong></a> to learn more about their pricing and features.
+                    Once the agent is created, you own it. We just help you build it and deploy it. We charge a fee for our creation services and the monthly fee is paid directly to ElevenLabs by you. We'll guide you every step of the way. Their plans start at around $5.00 a month. <a href="https://try.elevenlabs.io/davidwicks" target="_blank" rel="noopener noreferrer">Visit <strong class="text-indigo-600">ElevenLabs</strong></a> to learn more about their pricing and features.
                 </p>
                 <div class="text-center pt-6">
                      <a href="#contact" class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-3 px-6 rounded-lg transition duration-300 shadow-md">Get Started Today</a>
