--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="text-2xl font-bold text-indigo-600"><i class="fas fa-brain"></i>&nbsp;DavidWicks AI</div>
+            <div class="text-2xl font-bold text-indigo-600"><i class="fas fa-brain"></i>&nbsp;DavidWicks AI Agents</div>
             <a href="#contact" class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2 px-5 rounded-lg transition duration-300">Request Full Demo</a>
         </nav>
     </header>
